tests/paczka1/fuzzy1/16035398.err
Error in line 7: A491 A450 50,2
Error in line 3: LqIMGR A988 40,4
Error in line 2: CRnQAmJeC A988 97,0
Error in line 10: LqIMGR A450 11,4
Error in line 18: snUkJc A491 26,4
Error in line 23: LqIMGR A491 0,91
Error in line 20: snUkJc A450 90,4
Error in line 26: BdPit A450 34,8
Error in line 29: LqIMGR A491 0,60
Error in line 28: BdPit S895 31,2
Error in line 25: snUkJc S895 30,9
Error in line 35: CRnQAmJeC S895 94,9
Error in line 36: snUkJc A450 92,2
